TIMD-162: Fixed support of Boolean input tags conversion into numeric values